Add bags per month estimate

--- a/embed.html
+++ b/embed.html
@@ -99,6 +99,10 @@
                         <span class="nd-calc-result-value" id="resultGrams">-</span>
                     </div>
                     <div class="nd-calc-result-item">
+                        <span class="nd-calc-result-label">Simply Raw® bags per month:</span>
+                        <span class="nd-calc-result-value" id="resultBags">-</span>
+                    </div>
+                    <div class="nd-calc-result-item">
                         <span class="nd-calc-result-label">Feeding schedule:</span>
                         <span class="nd-calc-result-value" id="resultSchedule">-</span>
                     </div>
