Changed wording from "Dog food calculator" to "Simply Raw Calculator
That's it!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="nd-calc-container">
         <div class="nd-calc-wrapper">
             <header class="nd-calc-header">
-                <h1 class="nd-calc-title">Dog Food Calculator</h1>
+                <h1 class="nd-calc-title">Simply Raw Calculator</h1>
                 <p class="nd-calc-subtitle">Find the perfect Simply Raw® portion size for your dog</p>
             </header>
 
