Made Feeding Schedule Static
Switched Feeding Schedule from a dynamic to a static value (1-2 times per day), as requested.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="nd-calc-result-item">
                         <span class="nd-calc-result-label">Feeding schedule:</span>
-                        <span class="nd-calc-result-value" id="resultSchedule">-</span>
+                        <span class="nd-calc-result-value"">1-2 Times Per Day</span>
                     </div>
                 </div>
                 <div class="nd-calc-disclaimer">
